--- a/src/main/webapp/Among-US-API.html
+++ b/src/main/webapp/Among-US-API.html
@@ -24,7 +24,7 @@
     <meta property="og:title" content="Among US-API">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Among-US-API.html" data-home-page-title="Among US-API" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-eba3"><div class="u-clearfix u-sheet u-sheet-1"></div></header> 
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-eba3"><div class="u-clearfix u-sheet u-sheet-1"></div></header> 
     <section class="skrollable skrollable-between u-align-center u-clearfix u-gradient u-section-1" id="sec-8db6">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-default u-image-1" src="images/logo.PNG" alt="" data-image-width="1197" data-image-height="378">
